// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search: Snapshot > render with blog results 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open fixed inset-0 z-20 bg-black/75"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open absolute top-1/2 left-1/2 z-40 h-[40rem] w-11/12 -translate-x-1/2 -translate-y-1/2 overflow-y-auto rounded-md border-slate-500 bg-white outline-none md:w-1/2"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="p-8"
          data-testid="search-modal"
        >
          <input
            class="input-bordered sticky mb-1 w-full rounded-sm border-[1px] p-2"
            data-testid="search-input"
            placeholder="Search for a blog post or user..."
            type="text"
            value="hello"
          />
          <div
            class="my-2 flex rounded-md border-b p-3 transition-all hover:cursor-pointer hover:bg-gray-200"
            data-testid="search-posts"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] self-center"
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2rem;"
            />
            <div
              class="ml-3"
            >
              <p
                class="font-bold"
              >
                title1
              </p>
              <p
                class="text-xs"
              >
                test
              </p>
            </div>
          </div>
          <div
            class="my-2 flex rounded-md border-b p-3 transition-all hover:cursor-pointer hover:bg-gray-200"
            data-testid="search-posts"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] self-center"
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2rem;"
            />
            <div
              class="ml-3"
            >
              <p
                class="font-bold"
              >
                title2
              </p>
              <p
                class="text-xs"
              >
                test
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Search: Snapshot > render with no results 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay fixed inset-0 z-20 bg-black/75"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content absolute top-1/2 left-1/2 z-40 h-[40rem] w-11/12 -translate-x-1/2 -translate-y-1/2 overflow-y-auto rounded-md border-slate-500 bg-white outline-none md:w-1/2"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="p-8"
          data-testid="search-modal"
        >
          <input
            class="input-bordered sticky mb-1 w-full rounded-sm border-[1px] p-2"
            data-testid="search-input"
            placeholder="Search for a blog post or user..."
            type="text"
            value=""
          />
          <div
            class="flex h-[35rem] flex-col justify-center align-middle"
          >
            <p
              class="self-center"
            >
              Start typing to search for a blog post!
               
            </p>
            <p
              class="self-center"
            >
              Type @ at the beginning to search for a user.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Search: Snapshot > render with user results 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open fixed inset-0 z-20 bg-black/75"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open absolute top-1/2 left-1/2 z-40 h-[40rem] w-11/12 -translate-x-1/2 -translate-y-1/2 overflow-y-auto rounded-md border-slate-500 bg-white outline-none md:w-1/2"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="p-8"
          data-testid="search-modal"
        >
          <input
            class="input-bordered sticky mb-1 w-full rounded-sm border-[1px] p-2"
            data-testid="search-input"
            placeholder="Search for a blog post or user..."
            type="text"
            value="@test"
          />
          <a
            class="my-2 flex rounded-md border-b p-3 transition-all hover:cursor-pointer hover:bg-gray-200"
            data-testid="search-users"
            href="/profile/id1"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] self-center"
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2rem;"
            />
            <div
              class="ml-3 flex"
            >
              <p
                class="self-center"
              >
                <mark
                  class="bg-sky-200 dark:bg-amber-200"
                >
                  test
                </mark>
                1
              </p>
            </div>
          </a>
          <a
            class="my-2 flex rounded-md border-b p-3 transition-all hover:cursor-pointer hover:bg-gray-200"
            data-testid="search-users"
            href="/profile/id2"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] self-center"
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2rem;"
            />
            <div
              class="ml-3 flex"
            >
              <p
                class="self-center"
              >
                <mark
                  class="bg-sky-200 dark:bg-amber-200"
                >
                  test
                </mark>
                2
              </p>
            </div>
          </a>
          <a
            class="my-2 flex rounded-md border-b p-3 transition-all hover:cursor-pointer hover:bg-gray-200"
            data-testid="search-users"
            href="/profile/id3"
          >
             
            <img
              alt="avatar"
              class="inline-block aspect-square rounded-[50%] self-center"
              src="https://i.stack.imgur.com/34AD2.jpg"
              style="width: 2rem;"
            />
            <div
              class="ml-3 flex"
            >
              <p
                class="self-center"
              >
                <mark
                  class="bg-sky-200 dark:bg-amber-200"
                >
                  test
                </mark>
                3
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
